examples/should_fail/self-referential-sync-mode.anvil
chan ch {
    left req : (logic@#1) @#req+1 // req references itself which is not allowed
}

proc Top() {
    loop {
        cycle 1
    }
}
